Fixed footer overflow

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
    position: relative;
    width: 100vw;
-   height: 225px;
+   height: 285px;
    margin-top: 300px;
 }
 .links {
@@ -14,7 +14,7 @@
    width: 252px;
    height: 18px;
    left: calc(50% - 252px / 2 + 0.5px);
-   bottom: -30px;
+   bottom: 30px;
 }
 .links li {
    font-family: Mulish;
@@ -51,7 +51,7 @@
    width: 144px;
    height: 148.03px;
    right: 80px;
-   bottom: 26.97px;
+   bottom: 86.97px;
 }
 .footer-button {
    display: flex;
@@ -62,7 +62,7 @@
    width: 108px;
    height: 43px;
    right: 229px;
-   bottom: 109px;
+   bottom: 169px;
    background: #000c38;
    border-radius: 4px;
    cursor: pointer;
