--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -8,7 +8,7 @@
    top: 21px;
 }
 .navigation.bottom {
-   bottom: 30px;
+   bottom: 90px;
 }
 .navigation ul {
    display: flex;
